--- a/public/index.html
+++ b/public/index.html
@@ -41,3 +41,14 @@
     -->
   </body>
 </html>
+<script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin />
+
+<script
+  src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+  crossorigin
+/>
+
+<script
+  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+  crossorigin
+/>
